# LinuxAppDev2023

./: README.md
01_TerminalProject/: Makefile  README.md  Show  Show.c
02_Multifile/: Makefile  fun.c  outlib.h  prog.c
03_Text/: randomizer.sh
04_Debugging/: Makefile  range.c  range1_expected.txt  range2_expected.txt  script1.py  script2.py
05_Regexps/: Makefile  esub  main  main.c
06_TracingFencing/: hack.c  main.c
07_Environmental/: CMakeLists.txt  Makefile  test.ref  test.sh
07_Environmental/src/: main.c
08_I18n/: .gitignore  CMakeLists.txt  Makefile  README.md  i18n.pot  main.c
08_I18n/po/: ru.po
09_PatchDiff/: 1.patch  2.patch  3.patch  Makefile  main.c
10_Testing/: tests.c
